Move data loading into setup.yml.
Signed-off-by: Jon Seymour <jon@wildducktheories.com>

--- a/setup.yml
+++ b/setup.yml
@@ -102,3 +102,13 @@
           sleep 5
 
       tags: ["start"]
+
+    - block:
+      - name: "Load the sample data (load-data)"
+        shell: |
+          cd ~/services &&
+          ./build/influx -execute 'create database sampledb' &&
+          curl --data-binary @- "http://localhost:8086/write?db=sampledb&precision=ns" < test-data/load.influx &&
+          build/kapacitor record query -query 'select * from "sampledb"."default"."sample" group by *' -type stream > recording.id
+
+      tags: ["load-data"]
