--- a/issue-423.yml
+++ b/issue-423.yml
@@ -13,20 +13,22 @@
     - block:
       - name: "Load the tick data (load-ticks)"
         shell: |
-          cd ~/services &&
-          build/kapacitor define -name aggregate -tick tick/aggregate.tick -type stream -dbrp "sampledb"."default"
+          kapacitor define -name aggregate -tick tick/aggregate.tick -type stream -dbrp "sampledb"."default"
+        args:
+          chdir: ~/services
 
       tags: ["load-ticks"]
 
     - block:
       - name: "Run the test case"
         shell: |
-          cd ~/services &&
-          (build/influx --execute 'drop measurement actual' --database sampledb || true)  &&
-          (build/influx --execute 'drop measurement expected' --database sampledb || true) &&
-          build/kapacitor replay -id $(cat recording.id) -name aggregate --fast --rec-time &&
-          build/influx --format=csv --execute "select mean(metric1) as metric1 into expected from sample where time >= '2016-03-08 05:00:00' and time < '2016-03-08 08:00:00' group by time(5m), *" --precision=rfc3339 --database=sampledb &&
-          build/influx --format=csv --execute 'select * from actual' --precision=rfc3339 --database=sampledb > actual.csv &&
-          build/influx --format=csv --execute 'select * from expected' --precision=rfc3339 --database=sampledb > expected.csv
+          (influx --execute 'drop measurement actual' --database sampledb || true)  &&
+          (influx --execute 'drop measurement expected' --database sampledb || true) &&
+          kapacitor replay -id $(cat recording.id) -name aggregate --fast --rec-time &&
+          influx --format=csv --execute "select mean(metric1) as metric1 into expected from sample where time >= '2016-03-08 05:00:00' and time < '2016-03-08 08:00:00' group by time(5m), *" --precision=rfc3339 --database=sampledb &&
+          influx --format=csv --execute 'select * from actual' --precision=rfc3339 --database=sampledb > actual.csv &&
+          influx --format=csv --execute 'select * from expected' --precision=rfc3339 --database=sampledb > expected.csv
+        args:
+          chdir: ~/services
 
       tags: ["test-case"]
