--- a/issue-423.yml
+++ b/issue-423.yml
@@ -11,7 +11,7 @@
     - include: tasks/sync.yml
 
     - block:
-      - name: "Load the tick data (load-ticks)"
+      - name: "Load the tick scripts"
         shell: |
           kapacitor define -name aggregate -tick tick/aggregate.tick -type stream -dbrp "sampledb"."default"
         args:
@@ -27,8 +27,10 @@
           kapacitor replay -id $(cat recording.id) -name aggregate --fast --rec-time &&
           influx --format=csv --execute "select mean(metric1) as metric1 into expected from sample where time >= '2016-03-08 05:00:00' and time < '2016-03-08 08:00:00' group by time(5m), *" --precision=rfc3339 --database=sampledb &&
           influx --format=csv --execute 'select * from actual' --precision=rfc3339 --database=sampledb > actual.csv &&
-          influx --format=csv --execute 'select * from expected' --precision=rfc3339 --database=sampledb > expected.csv
+          influx --format=csv --execute 'select * from expected' --precision=rfc3339 --database=sampledb > expected.csv &&
+          diff <(sed "s/expected/actual/" < expected.csv) actual.csv
         args:
           chdir: ~/services
+          executable: /bin/bash
 
       tags: ["test-case"]
