--- a/tasks/sync.yml
+++ b/tasks/sync.yml
@@ -1,9 +1,9 @@
 - block:
   - name: synchronize
-    synchronize: src=files/services/ dest=~/services/
+    synchronize: src=files/ dest=~/ archive=no
 
   - name: ownership
-    file: path=/home/{{ansible_user}}/services/ owner={{ansible_user}} group={{ansible_user}} recurse=yes
+    file: path=/home/{{ansible_user}}/ owner={{ansible_user}} group={{ansible_user}} recurse=yes
     become_user: root
   tags: ["sync"]
 
