--- a/tasks/sync.yml
+++ b/tasks/sync.yml
@@ -1,6 +1,9 @@
 - block:
-  - name: synchronize
-    synchronize: src=files/ dest=~/ archive=no
+  - name: synchronize files
+    synchronize: src=files/ dest=~/ archive=no recursive=yes perms=yes
+
+  - name: synchronize tests
+    synchronize: src=tests/ dest=~/tests/ archive=no recursive=yes perms=yes
 
   - name: ownership
     file: path=/home/{{ansible_user}}/ owner={{ansible_user}} group={{ansible_user}} recurse=yes
